--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-player": "^2.10.1",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.1",
     "sass": "^1.53.0",
